fix: adjustment in swagger documentation
